Adds product entity, item entity, item service

--- a/cart_service.tests/cart_service.tests.csproj
+++ b/cart_service.tests/cart_service.tests.csproj
@@ -16,4 +16,19 @@
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\cart_service\cart_service.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Feature\" />
+    <None Remove="Feature\Cart\" />
+    <None Remove="Feature\Cart\Domain\" />
+    <None Remove="Feature\Cart\Domain\Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Feature\" />
+    <Folder Include="Feature\Cart\" />
+    <Folder Include="Feature\Cart\Domain\" />
+    <Folder Include="Feature\Cart\Domain\Services\" />
+  </ItemGroup>
 </Project>
